--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       <canvas id="canvas" width="500" height="700"></canvas>
     </div>
 
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="./scripts/component.js"></script>
+    <script type="text/javascript" src="./scripts/obstacle.js"></script>
+    <script type="text/javascript" src="./scripts/player.js"></script>
+    <script type="text/javascript" src="./scripts/game.js"></script>
+    <script type="text/javascript" src="./scripts/script.js"></script>
   </body>
 </html>
